--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,20 @@ button i {
   margin-right: 1rem;
 }
 
+.spring {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 6rem 0;
+}
+
+.spring .coil {
+  border-bottom: 0.1px dash white;
+}
+
 /* ******************** */
 /*         Mixins                     */
 /* ******************** */
