--- a/style.scss
+++ b/style.scss
@@ -70,6 +70,16 @@ button {
     }
 }
 
+.spring {
+    display: flex;
+    align-items: center;
+    margin: 6rem 0;
+
+    .coil {
+        border-bottom: 0.1px dash white;
+    }
+}
+
 /* ******************** */
 /*         Mixins                     */
 /* ******************** */
