Trabajando los estilos para la clase .bar

--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,12 @@ button i {
 }
 
 .spring .coil {
-  border-bottom: 0.1px dash white;
+  border-bottom: 0.1px dashed white;
+}
+
+.spring .bar {
+  width: 0.5%;
+  height: 7rem;
 }
 
 /* ******************** */
